--- a/beamer_slides/inhalt/intro.tex
+++ b/beamer_slides/inhalt/intro.tex
@@ -182,6 +182,19 @@
 			\item Filter configurations can be copied to quickly apply the same configuration multiple times
     \end{itemize}
 \end{frame}
+  
+\begin{frame}
+  \frametitle{View Properties Panel}
+    \begin{itemize}
+      \item Change general visualization and rendering properties/options
+      \item Change \keyword{Opacity/Transparency} to make it possible to see through certain objects
+      \item Change rendering properties for objects to give them a special appearence
+      \item Change solid color, color maps or color of edges
+      \item Change the projection method between \keyword{parallel} and \keyword{perspective} (useful for selections)
+      \item Increase/decrease rendering quality of source objects
+      \item Display \keyword{grid axes} around an object
+    \end{itemize}
+\end{frame}
 
 \begin{frame}
   \frametitle{Camera and Axes Toolbar}
@@ -197,8 +210,6 @@
       \item Select a new center of rotation 
     \end{itemize}
 \end{frame}
-
-
 
 \begin{frame}
   \frametitle{Basic Filters}
@@ -218,6 +229,14 @@
 
 \begin{frame}
   \frametitle{Color Maps}
+    \begin{itemize}
+      \item Choose a color gradient map for your data set
+      \item Create your own color map from scratch or by modifying an existing
+      \item Popular choice for CFD: \keyword{Blue to Red Rainbow Gradient}
+      \item Customize the number of discrete colors in the color map (contour visualization)
+      \item Customize the mapping of colors to numerical values in the data set
+      \item Set your customized settings as defaults
+    \end{itemize}
 \end{frame}
 
 \begin{frame}
@@ -319,6 +338,17 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Tracer Filters}
+    \begin{itemize}
+      \item Visualization of fluid motion by markers/tracers/indicators
+      \item Streamlines for stationary vector fields
+      \item Visualize the path that a particle would take 
+      \item Particle tracers for transient data
+      \item Moves particles along a series of vector fields
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
 
   \frametitle{Configuration of Tracer Filters}
 
@@ -394,7 +424,28 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Selecting and Inspecting Data}
+    \begin{itemize}
+      \item Inspect nodes or elements of special interest in your data set
+      \item Locate/Pinpoint a potential or actual cause of problems in your simulation data
+      \item Parallel projection mode can be very helpful during manual selection
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
   \frametitle{Screenshots With ParaView}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Advanced Screenshot techniques}
+    \begin{itemize}
+      \item Use split windows to make side-by-side comparisons
+      \item Use the text source to add labels to certain elements
+      \item Set precise screenshot dimensions with the lock screen function
+      \item Background colors can be quickly adjusted by changing the color palette
+      \item Font and color of labels and color map widgets can be customized
+      \item Visualize edges with tube filter to increase visibility
+    \end{itemize}
 \end{frame}
 
 \begin{frame}
