--- a/beamer_slides/inhalt/intro.tex
+++ b/beamer_slides/inhalt/intro.tex
@@ -496,6 +496,14 @@
 
 \begin{frame}
   \frametitle{Screenshots With ParaView}
+    \begin{itemize}
+      \item Screenshots can be made from \keyword{File->Save Screenshots} 
+      \item Screenshots size can be set in dialog window
+      \item The content of the screenshot is the entire render view
+    \end{itemize}
+		\begin{center}
+      \includegraphics[width=0.6\textwidth]{screenshots/screen-dialog.png}
+		\end{center}
 \end{frame}
 
 \begin{frame}
@@ -512,6 +520,13 @@
 
 \begin{frame}
   \frametitle{Animations/Movies With ParaView}
+    \begin{itemize}
+      \item Animations can be rendered in ParaView by \keyword{File->Save Animation}
+      \item Can be saved as a .png file series or movie format 
+      \item Image series can later be compiled into a movie with other programs 
+      \item Animation can be configured by \keyword{View->Animation View}
+      \item Frames per second, video length, start and end time can be set
+    \end{itemize}
 \end{frame}
 
 \begin{frame}
