--- a/beamer_slides/inhalt/intro.tex
+++ b/beamer_slides/inhalt/intro.tex
@@ -715,3 +715,8 @@
 
 \end{frame}
 
+\begin{frame}
+  \frametitle{Happy ParaViewing}
+    \includegraphics[width=0.9\textwidth]{screenshots/paraviewing.png}
+\end{frame}
+
