--- a/beamer_slides/inhalt/intro.tex
+++ b/beamer_slides/inhalt/intro.tex
@@ -238,6 +238,20 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Sources}
+
+    \begin{itemize}
+      \item Insert geometric shapes into the pipeline (boxes, spheres, cylinders, ...)
+      \item Can be transformed by \keyword{Transform} filter
+      \item Also text, programmable sources or measurement tools
+    \end{itemize}
+    \begin{center}
+      \includegraphics[width=0.8\textwidth]{screenshots/sources.png}
+    \end{center}
+
+\end{frame}
+
+\begin{frame}
   \frametitle{Color Maps}
     \begin{itemize}
       \item Choose a color gradient map for your data set
