--- a/beamer_slides/LaTeX_Einfuehrung.tex
+++ b/beamer_slides/LaTeX_Einfuehrung.tex
@@ -65,7 +65,7 @@
   breaklines=true,                 
   captionpos=b,                    
   keepspaces=true,                 
-  numbers=left,                    
+  numbers=none,                    
   numbersep=5pt,                  
   showspaces=false,                
   showstringspaces=false,
