--- a/beamer_slides/LaTeX_Einfuehrung.tex
+++ b/beamer_slides/LaTeX_Einfuehrung.tex
@@ -13,6 +13,7 @@
 \usepackage{graphicx}
 \usepackage{textpos}
 \usepackage{tikz}
+\usepackage{subfig}
 
 \usetikzlibrary{shapes.arrows,calc,decorations.pathmorphing}
 \usetikzlibrary{arrows.meta,shapes.misc}
@@ -22,8 +23,8 @@
 \usepackage{shadowtext}
 
 \usetheme{-tud-4-3}
-\newcommand{\titel}{Introduction to ParaView/Matplotlib}
-\newcommand{\titelkurz}{Introduction to ParaView/Matplotlib}
+\newcommand{\titel}{Introduction to Meshes}
+\newcommand{\titelkurz}{Introduction to Meshes}
 \newcommand{\vortragender}{Raphael M\"unster}
 \newcommand{\koautoren}{}
 \newcommand{\ortdatum}{\today}
@@ -197,8 +198,9 @@ escapechar=@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % N O R M A L E   U N I - V E R S I O N
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\include{inhalt/intro}
-\include{inhalt/matplotlib}
+\include{inhalt/meshes1}
+%\include{inhalt/intro}
+%\include{inhalt/matplotlib}
 %\begin{frame}
 %	\begin{block}{\huge Aufgabe 1 (Hello World)}
 %		\input{../exercises/exercises/hello_world}
@@ -277,6 +279,11 @@ escapechar=@
 %\include{inhalt/aufzaehlungen}
 %\include{inhalt/mathematik-1}
 
+\begin{frame}[allowframebreaks]
+        \frametitle{References}
+\bibliographystyle{unsrt}				
+        \bibliography{fbmathlit}				
+\end{frame}
 
 \end{document}
 
