--- a/beamer_slides/LaTeX_Einfuehrung.tex
+++ b/beamer_slides/LaTeX_Einfuehrung.tex
@@ -22,6 +22,45 @@
 %%\usepackage{gitinfo}
 \usepackage{shadowtext}
 
+\usepackage{listings}
+\usepackage{xcolor}
+
+%New colors defined below
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+%Code listing style named "mystyle"
+\lstdefinestyle{mystyle}{
+  backgroundcolor=\color{TUlightgreen},   commentstyle=\color{codegreen},
+  keywordstyle=\color{magenta},
+  numberstyle=\tiny\color{codegray},
+  stringstyle=\color{codepurple},
+  basicstyle=\ttfamily\footnotesize,
+  breakatwhitespace=false,         
+  breaklines=true,                 
+  captionpos=b,                    
+  keepspaces=true,                 
+  numbers=none,                    
+  numbersep=5pt,                  
+  showspaces=false,                
+  showstringspaces=false,
+  showtabs=false,                  
+  tabsize=2
+}
+
+%"mystyle" code listing set
+\lstset{style=mystyle}
+
+
+
+\lstset{breaklines=true,      % sets automatic line breaking
+basicstyle=\ttfamily\LARGE,
+language=TeX,
+escapechar=@
+}
+
 \usetheme{-tud-4-3}
 \newcommand{\titel}{Introduction to Meshes}
 \newcommand{\titelkurz}{Introduction to Meshes}
